# marching_caves

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ccpp.yml
include/geometry/: hexahedron.hpp  hexon.hpp  marching_hexahedra.hpp  marching_polygons.hpp  marching_tetra.hpp  paulbourke_optimized.hpp  paulbourke_polygonise.hpp  tetrahedron.hpp  tetron.hpp
include/task/: marching_cubes_task.hpp
res/shaders/: marching_cubes.comp  marching_cubes.comp.spv  marching_lut.glsl  terrain_volume.glsl
src/geometry/: hexahedron.cpp  marching_tetra.cpp  paulbourke_optimized.cpp  tetrahedron.cpp
src/task/: marching_cubes_task.cpp
test/: main.cpp
test/scene/: test_scene.cpp  test_scene.hpp
